--- a/smarttvleakage/sounds/apple_tv/config.json
+++ b/smarttvleakage/sounds/apple_tv/config.json
@@ -5,7 +5,7 @@
             { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
         ],
         "match_threshold": 0.1,
-        "match_buffer": -3.0
+        "match_buffer": -0.5
     },
     "keyboard_double_move": {
         "match_params": [
@@ -44,5 +44,23 @@
         ],
         "match_threshold": 0.5,
         "match_buffer": -1.0
+    },
+    "keyboard_scroll_double": {
+        "match_params": [
+            { "min_freq": 0, "max_freq": 15, "min_threshold": -55, "max_threshold": -38 },
+            { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
+        ],
+        "match_threshold": 0.1,
+        "match_buffer": 1.0,
+        "min_threshold": 1.0
+    },
+    "keyboard_scroll_triple": {
+        "match_params": [
+            { "min_freq": 0, "max_freq": 15, "min_threshold": -55, "max_threshold": -38 },
+            { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
+        ],
+        "match_threshold": 0.1,
+        "match_buffer": 1.5,
+        "min_threshold": 0.98
     }
 }
