--- a/smarttvleakage/sounds/apple_tv/config.json
+++ b/smarttvleakage/sounds/apple_tv/config.json
@@ -1,76 +1,38 @@
 {
     "keyboard_move": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 15, "min_threshold": -55, "max_threshold": -38 },
-            { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
-        ],
-        "match_threshold": 0.1,
-        "match_buffer": -0.5
-    },
-    "keyboard_double_move": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 15, "min_threshold": -55, "max_threshold": -38 },
-            { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
-        ],
-        "match_threshold": 1.0,
-        "match_buffer": -2.0
-    },
-    "keyboard_select": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 30, "min_threshold": -60, "max_threshold": -40 }
-        ],
-        "match_threshold": 0.1,
-        "match_buffer": 1.25
-    },
-    "keyboard_delete": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 20, "min_threshold": -55, "max_threshold": -35 },
-            { "min_freq": 20, "max_freq": 40, "min_threshold": -65, "max_threshold": -55 }
-        ],
-        "match_threshold": 1.1,
-        "match_buffer": -1.0
-    },
-    "system_move": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 12, "min_threshold": -65, "max_threshold": -55 },
-            { "min_freq": 12, "max_freq": 40, "min_threshold": -60, "max_threshold": -40 }
-        ],
-        "match_threshold": 1.05,
-        "match_buffer": -1.0
+        "threshold": 0.7,
+        "freq_delta": 5,
+        "time_delta": 3,
+        "time_tol": 2,
+        "min_similarity": 9.0,
+        "start_time": 1,
+        "end_time": 5
     },
     "toolbar_move": {
-        "match_params": [
-            { "min_freq": 15, "max_freq": 25, "min_threshold": -65, "max_threshold": -55 }
-        ],
-        "match_threshold": 0.2,
-        "match_buffer": 1.0
+        "threshold": 0.7,
+        "freq_delta": 5,
+        "time_delta": 5,
+        "min_similarity": 12.0
     },
-    "keyboard_scroll_double": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 15, "min_threshold": -55, "max_threshold": -38 },
-            { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
-        ],
-        "match_threshold": 0.1,
-        "match_buffer": 1.0,
-        "min_threshold": 1.0
+    "keyboard_select": {
+        "threshold": 0.8,
+        "freq_delta": 5,
+        "time_delta": 5,
+        "freq_tol": 2,
+        "min_similarity": 12.0,
+        "start_time": 2,
+        "end_time": 10
     },
-    "keyboard_scroll_triple": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 15, "min_threshold": -55, "max_threshold": -38 },
-            { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
-        ],
-        "match_threshold": 0.1,
-        "match_buffer": 1.0,
-        "min_threshold": 0.95
+    "system_move": {
+        "threshold": 0.7,
+        "freq_delta": 5,
+        "time_delta": 3,
+        "min_similarity": 12.0
     },
-    "keyboard_scroll_six": {
-        "match_params": [
-            { "min_freq": 0, "max_freq": 15, "min_threshold": -55, "max_threshold": -38 },
-            { "min_freq": 15, "max_freq": 40, "min_threshold": -60, "max_threshold": -50 }
-        ],
-        "match_threshold": 0.1,
-        "match_buffer": 1.0,
-        "min_threshold": 0.95
+    "keyboard_delete": {
+        "threshold": 0.7,
+        "freq_delta": 5,
+        "time_delta": 3,
+        "min_similarity": 12.0
     }
-
 }
