--- a/smarttvleakage/sounds/samsung/config.json
+++ b/smarttvleakage/sounds/samsung/config.json
@@ -1,67 +1,29 @@
 {
     "move": {
-        "match_params": {
-            "min_freq": 5,
-            "max_freq": 50,
-            "time_delta": 10,
-            "freq_delta": 3,
-            "threshold": -70,
-            "time_tol": 3,
-            "freq_tol": 1
-        },
-        "match_threshold": 0.7,
-        "match_buffer": 0.0
+        "threshold": 0.7,
+        "time_delta": 5,
+        "freq_delta": 5,
+        "min_similarity": 9.0
     },
     "key_select": {
-        "match_params": {
-            "min_freq": 15,
-            "max_freq": 50,
-            "time_delta": 10,
-            "freq_delta": 12,
-            "threshold": -71,
-            "time_tol": 2,
-            "freq_tol": 5
-        },
-        "match_threshold": 0.9,
-        "match_buffer": 0.0
+        "threshold": 0.7,
+        "time_delta": 5,
+        "freq_delta": 5,
+        "time_tol": 2,
+        "freq_tol": 2,
+        "min_freq": 20,
+        "min_similarity": 6.0
     },
     "select": {
-        "match_params": {
-            "min_freq": 5,
-            "max_freq": 50,
-            "time_delta": 5,
-            "freq_delta": 3,
-            "threshold": -66,
-            "time_tol": 3,
-            "freq_tol": 1
-        },
-        "match_threshold": 0.7,
-        "match_buffer": 2.5
-    },
-    "double_move": {
-        "match_params": {
-            "min_freq": 5,
-            "max_freq": 50,
-            "time_delta": 10,
-            "freq_delta": 3,
-            "threshold": -70,
-            "time_tol": 3,
-            "freq_tol": 1
-        },
-        "match_threshold": 0.9,
-        "match_buffer": 0.0
+        "threshold": 0.7,
+        "time_delta": 5,
+        "freq_delta": 5,
+        "min_similarity": 5.0
     },
     "delete": {
-        "match_params": {
-            "min_freq": 5,
-            "max_freq": 50,
-            "time_delta": 10,
-            "freq_delta": 3,
-            "threshold": -70,
-            "time_tol": 3,
-            "freq_tol": 1
-        },
-        "match_threshold": 0.9,
-        "match_buffer": 0.0
+        "threshold": 0.7,
+        "time_delta": 5,
+        "freq_delta": 5,
+        "min_similarity": 12.0
     }
 }
