--- a/smarttvleakage/sounds/samsung/config.json
+++ b/smarttvleakage/sounds/samsung/config.json
@@ -3,7 +3,9 @@
         "threshold": 0.7,
         "time_delta": 5,
         "freq_delta": 5,
-        "min_similarity": 9.0
+        "min_similarity": 9.0,
+        "dedup_threshold": 28.0,
+        "energy_threshold": 1.5
     },
     "key_select": {
         "threshold": 0.7,
@@ -12,18 +14,23 @@
         "time_tol": 2,
         "freq_tol": 2,
         "min_freq": 20,
-        "min_similarity": 6.0
+        "min_similarity": 4.6,
+        "energy_threshold": 2.5
     },
     "select": {
         "threshold": 0.7,
         "time_delta": 5,
         "freq_delta": 5,
-        "min_similarity": 5.0
+        "min_similarity": 5.0,
+        "dedup_threshold": 0.8,
+        "energy_threshold": 3.5
     },
     "delete": {
         "threshold": 0.7,
         "time_delta": 5,
         "freq_delta": 5,
-        "min_similarity": 12.0
+        "min_similarity": 12.0,
+        "dedup_threshold": 0.5,
+        "energy_threshold": 1.5
     }
 }
