Full pipeline for credit card detection with 17 / 30 recovered in top 2,500

--- a/smarttvleakage/sounds/samsung/config.json
+++ b/smarttvleakage/sounds/samsung/config.json
@@ -5,6 +5,7 @@
         "freq_delta": 5,
         "min_similarity": 9.5,
         "dedup_threshold": 16.0,
+        "force_threshold": 28.0,
         "dedup_buffer": 3.0,
         "energy_threshold": 1.5
     },
