--- a/smarttvleakage/sounds/apple_tv/config.json
+++ b/smarttvleakage/sounds/apple_tv/config.json
@@ -4,35 +4,40 @@
         "freq_delta": 5,
         "time_delta": 3,
         "time_tol": 2,
-        "min_similarity": 9.0,
+        "min_similarity": 12.0,
         "start_time": 1,
-        "end_time": 5
+        "end_time": 5,
+        "energy_threshold": 2.0
     },
     "toolbar_move": {
         "threshold": 0.7,
         "freq_delta": 5,
         "time_delta": 5,
-        "min_similarity": 12.0
+        "min_similarity": 10.0,
+        "energy_threshold": 3.5
     },
     "keyboard_select": {
         "threshold": 0.8,
         "freq_delta": 5,
         "time_delta": 5,
         "freq_tol": 2,
-        "min_similarity": 12.0,
+        "min_similarity": 9.0,
         "start_time": 2,
-        "end_time": 10
+        "end_time": 10,
+        "energy_threshold": 3.0
     },
     "system_move": {
         "threshold": 0.7,
         "freq_delta": 5,
         "time_delta": 3,
-        "min_similarity": 12.0
+        "min_similarity": 12.0,
+        "energy_threshold": 2.0
     },
     "keyboard_delete": {
         "threshold": 0.7,
         "freq_delta": 5,
         "time_delta": 3,
-        "min_similarity": 12.0
+        "min_similarity": 12.0,
+        "energy_threshold": 2.0
     }
 }
