Fix issues in Apple TV graph, add specialized recoveries for defenses in simulation

--- a/smarttvleakage/search/smarttvsearch/keyboard/apple_tv/appletv_keyboard_special.json
+++ b/smarttvleakage/search/smarttvsearch/keyboard/apple_tv/appletv_keyboard_special.json
@@ -142,5 +142,5 @@
         "*": { "up": "<BACK>" }
     }],
     "wraparound": {},
-    "unclickable": []
+    "unclickable": ["<abc>", "<ABC>", "<SPECIAL>"]
 }
