--- a/smarttvleakage/search/smarttvsearch/keyboard/apple_tv/appletv_keyboard_caps.json
+++ b/smarttvleakage/search/smarttvsearch/keyboard/apple_tv/appletv_keyboard_caps.json
@@ -82,5 +82,5 @@
         "*": { "up": "<BACK>" }
     }],
     "wraparound": {},
-    "unclickable": []
+    "unclickable": ["<abc>", "<ABC>", "<SPECIAL>"]
 }
